Clean index.html, start building layout, add few section. Add buttons, and style guide, colors, variables for colors, font-sizes for paragraphs and h1, h2, etc. Fix for not showing scroll in _default.scss

--- a/src/scss/modules/_defaults.scss
+++ b/src/scss/modules/_defaults.scss
@@ -12,7 +12,8 @@ body {
   color: #444;
   transition: all .4s .3s ease-in;
 }
-body,html{
-	min-height: 100vh;
-	overflow: hidden;
-}
+
+// body,html{
+// 	min-height: 100vh;
+// 	overflow: hidden;
+// }
