--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -8,3 +8,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
+
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 18px;
+}
