--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -1,3 +1,13 @@
+$accent-color: #7cc576;
+$primary-color: #ffffff;
+$secondary-color: #000000;
+$text-color--lighter: #ccc;
+$text-color--darker: #777;
+
+
+
+
+
 $base : #F7F6F0;
 $darken : darken(#F7F6F0 , 30%);
 $back: darken(#F7F6F0, 40%);
